--- a/columbiad-express-infra/pom.xml
+++ b/columbiad-express-infra/pom.xml
@@ -11,24 +11,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <properties>
-        <spring-boot.version>2.2.0.M5</spring-boot.version>
-        <spring-hateoas.version>1.0.0.RC1</spring-hateoas.version>
+        <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
+        <spring-hateoas.version>1.0.1.RELEASE</spring-hateoas.version>
         <evo.version>1.2.2</evo.version>
     </properties>
-    <repositories>
-        <repository>
-            <id>repository.spring.milestone</id>
-            <name>Spring Milestone Repository</name>
-            <url>http://repo.spring.io/milestone</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>central</id>
-            <name>repo.spring.io-libs-milestone</name>
-            <url>https://repo.spring.io/libs-milestone</url>
-        </pluginRepository>
-    </pluginRepositories>
     <build>
         <pluginManagement>
             <plugins>
@@ -60,11 +46,6 @@
     </build>
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.plugin</groupId>
-                <artifactId>spring-plugin-core</artifactId>
-                <version>2.0.0.M2</version>
-            </dependency>
             <dependency>
                 <groupId>org.springframework.hateoas</groupId>
                 <artifactId>spring-hateoas</artifactId>
