Using autodetection of Jupiter Extensions

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,9 @@
                         <includes>
                             <include>**/*Should.java</include>
                         </includes>
+                        <argLine>
+                            -Djunit.jupiter.extensions.autodetection.enabled=true
+                        </argLine>
                     </configuration>
                 </plugin>
                 <plugin>
