Fixing DisplayNameGenerator availability problem in the infrastructure

--- a/columbiad-express-domain/pom.xml
+++ b/columbiad-express-domain/pom.xml
@@ -60,6 +60,16 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
