--- a/columbiad-express-infra/pom.xml
+++ b/columbiad-express-infra/pom.xml
@@ -24,6 +24,7 @@
                     <configuration>
                         <compilerPlugins>
                             <plugin>spring</plugin>
+                            <plugin>all-open</plugin>
                         </compilerPlugins>
                         <pluginOptions>
                             <option>
@@ -31,6 +32,13 @@
                             </option>
                         </pluginOptions>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.jetbrains.kotlin</groupId>
+                            <artifactId>kotlin-maven-allopen</artifactId>
+                            <version>${kotlin.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
             </plugins>
         </pluginManagement>
