--- a/columbiad-express-infra/pom.xml
+++ b/columbiad-express-infra/pom.xml
@@ -11,7 +11,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <properties>
-        <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
+        <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
         <spring-hateoas.version>1.0.3.RELEASE</spring-hateoas.version>
         <evo.version>1.2.2</evo.version>
     </properties>
@@ -123,6 +123,7 @@
             <artifactId>columbiad-express-domain</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
