--- a/columbiad-express-infra/pom.xml
+++ b/columbiad-express-infra/pom.xml
@@ -11,8 +11,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <properties>
-        <spring-boot.version>2.3.1.RELEASE</spring-boot.version>
-        <spring-hateoas.version>1.1.0.RELEASE</spring-hateoas.version>
+        <spring-boot.version>2.4.4</spring-boot.version>
+        <spring-hateoas.version>1.2.5</spring-hateoas.version>
         <evo.version>1.2.2</evo.version>
     </properties>
     <build>
