--- a/columbiad-express-infra/pom.xml
+++ b/columbiad-express-infra/pom.xml
@@ -11,9 +11,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <properties>
-        <spring-boot.version>2.4.4</spring-boot.version>
-        <spring-hateoas.version>1.2.5</spring-hateoas.version>
+        <spring-boot.version>2.4.5</spring-boot.version>
+        <spring-hateoas.version>1.3.0</spring-hateoas.version>
         <evo.version>1.2.2</evo.version>
+        <jsonpath.version>2.5.0</jsonpath.version>
     </properties>
     <build>
         <pluginManagement>
@@ -59,6 +60,11 @@
     </build>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.jayway.jsonpath</groupId>
+                <artifactId>json-path</artifactId>
+                <version>2.5.0</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.hateoas</groupId>
                 <artifactId>spring-hateoas</artifactId>
