--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Columbiad Express",
-  "name": "Columbiad Express",
+  "short_name": "Mandalore Express",
+  "name": "Mandalore Express",
   "icons": [
     {
       "src": "favicon.ico",
