--- a/backend/mandalore-express-infra/pom.xml
+++ b/backend/mandalore-express-infra/pom.xml
@@ -11,10 +11,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <properties>
-        <spring-boot.version>2.4.5</spring-boot.version>
-        <spring-hateoas.version>1.3.0</spring-hateoas.version>
+        <spring-boot.version>3.0.6</spring-boot.version>
+        <spring-hateoas.version>2.0.3</spring-hateoas.version>
         <evo.version>1.2.2</evo.version>
-        <jsonpath.version>2.5.0</jsonpath.version>
+        <jsonpath.version>2.7.0</jsonpath.version>
     </properties>
     <build>
         <pluginManagement>
@@ -63,7 +63,7 @@
             <dependency>
                 <groupId>com.jayway.jsonpath</groupId>
                 <artifactId>json-path</artifactId>
-                <version>2.5.0</version>
+                <version>${jsonpath.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.hateoas</groupId>
