--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -126,7 +126,7 @@
                         <args>
                             <arg>-Xjsr305=strict</arg>
                         </args>
-                        <jvmTarget>1.8</jvmTarget>
+                        <jvmTarget>${java.version}</jvmTarget>
                         <javaParameters>true</javaParameters>
                     </configuration>
                     <executions>
